--- a/.gitignore
+++ b/.gitignore
@@ -36,9 +36,9 @@ pcap_open_dead.3pcap
 pcap_open_offline.3pcap
 pcap_set_tstamp_precision.3pcap
 pcap_set_tstamp_type.3pcap
-scanner.c
-scanner.h
+#scanner.c
+#scanner.h
 selpolltest
 tokdefs.h
-version.c
-version.h
+#version.c
+#version.h
